syntax = "proto3";
option go_package = "github.com/hisamouna/grgw-tutorial/internal/helloworld";

package helloworld;

import "google/api/annotations.proto";

// The greeting service definition
service Greeter {
  // Sends a greeting
  rpc SayHello(HelloRequest) returns (HelloResponse) {
    option (google.api.http) = {
      post: "/v1/example/echo"
      body: "*"
    };
  }
  rpc HiHello(HelloRequest) returns (HelloResponse) {
    option (google.api.http) = {
      get: "/v1/example/echo/get"
    };
  }
}

// The request message containing the user's name
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloResponse {
  string message = 1;
}
